--- a/meson_options.txt
+++ b/meson_options.txt
@@ -270,6 +270,8 @@ option('vduse_blk_export', type: 'feature', value: 'auto',
 
 option('capstone', type: 'feature', value: 'auto',
        description: 'Whether and how to find the capstone library')
+option('capstone_disas_syntax', type : 'string', value : '',
+       description: 'Set capstone disassembler syntax style')
 option('fdt', type: 'combo', value: 'auto',
        choices: ['disabled', 'enabled', 'auto', 'system', 'internal'],
        description: 'Whether and how to find the libfdt library')
